e2e-simple/angular-demo/k8s/deployment-v2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demo-ui-v2
  labels:
    app: demo-ui
    version: v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-ui
      version: v2
  template:
    metadata:
      labels:
        app: demo-ui
        version: v2
    spec:
      containers:
        - name: demo-ui
          image: registry-intl-vpc.eu-central-1.aliyuncs.com/yagr-demo/demo-ui:v0.2
          imagePullPolicy: Always
          ports:
            - containerPort: 4200
